--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
          <main>
             <div class="link" >
-               <a  href="">Go to <span class="text-bolt">LESSON 6</span><a>
+               <a  href="">Go to <span class="text-bolt">LESSON 6</span></a>
             </div>
 
             <div class="title">
@@ -35,7 +35,7 @@
             </div>
 
             <div class="star">
-               <img src="img/Frame 3.svg" alt="">
+               <img src="img/Frame-3.svg" alt="звезды">
             </div>
 
             <div class="star">
@@ -45,7 +45,7 @@
             </div>
 
             <div class="img-men">
-               <img src="img/Image.svg" alt="">
+               <img src="img/Image.svg" alt="фото мужчини">
             </div>
 
 
