--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
          <main>
             <div class="link" >
-               <a  href="">Go to <span class="text-bolt">LESSON 6</span></a>
+               <a  href="https://vitalija3023.github.io/Disney/">Go to <span class="text-bolt">LESSON 6</span></a>
             </div>
 
             <div class="title">
